# thea

./: .gitignore  README.md  Results Notebook.ipynb  create_dataset.py  notebook.ipynb  pylintrc  pyproject.toml  results.ipynb  results.json  run_experiments.py
datasets/: dataset1.json  sample_dataset1.json
simulation/: __init__.py  __main__.py  argos.py  custom_component_methods.py  faticanti2020.py  helper_methods.py  nsgaii.py
simulation/strategies/: __init__.py  argos.py  faticanti2020.py  nsgaii.py  thea.py
