[tool.poetry]
name = "thea"
version = "0.1.0"
description = "Latency-aware power-efficient microservice placement on federated edge computing infrastructures."
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>"]

[tool.poetry.dependencies]
python = "^3.7.1"
edge-sim-py = {git = "https://github.com/EdgeSimPy/EdgeSimPy.git", rev = "v1.0.0"}
pymoo = "0.5.0"
Cython = "^0.29.32"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 135
